Fixes conditional where biography was not showing if artist did not have an Artsy blurb

--- a/components/main_layout/stylesheets/headers.styl
+++ b/components/main_layout/stylesheets/headers.styl
@@ -70,6 +70,7 @@ bisected-header(leftWidth)
 
 .evenly-bisected-header
   bisected-header(50%)
+  margin 0
 
 .sixty-forty-bisected-header
   bisected-header(60%)
